--- a/src/skins/colors.scss
+++ b/src/skins/colors.scss
@@ -16,7 +16,7 @@ $colors: (
   'ebony-clay': #293347,
   'limed-spruce': #353F49,
 
-  'red': #F81C1C,
+  'burgundy': #D52525,
   'yellow': #F8E71C,
 
   'blue': #328cc3,
