--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@ body {
   background-color: setColor('white');
   font-family: 'Roboto', sans-serif;
   font-size: 10px;
+  margin: 0;
 }
 ol, ul {
 	list-style: none;
@@ -13,11 +14,14 @@ p {
 }
 
 .car-dealer {
-  @include flex(row);
+  display: flex;
+  flex-flow: row wrap;
   .main {
-    width: 66%;
+    flex: 2 1 auto;
   }
   .sidebar {
-    width: 33%;
+    background-color: setColor('black');
+    color: setColor('white');
+    flex: 1 1 auto;
   }
 }
