--- a/src/skins/colors.scss
+++ b/src/skins/colors.scss
@@ -4,11 +4,13 @@ $colors: (
   'silver': #CCCCCC,
   'porcelain': #F5F6F7,
 
+  'alto': #D1D1D1,
   'light-grey': #A1A8A9,
   'mid-grey': #727272,
   'dark-grey': rgba(255, 255, 255, 0.3),
   'tundora': #404040,
   'shuttle-grey': #525d68,
+  'mine-shaft': #3B3838,
 
   'default-dark': #242a33,
   'cod-grey': #141414,
