--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,6 +1,9 @@
 @import '../../skins/index.scss';
 
 .header {
+  @include flex(row);
+  align-items: center;
+  justify-content: space-between;
   height: 100px;
 
   @include element('logo') {
@@ -10,6 +13,14 @@
     p {
       font-size: 2.3em;
       color: setColor('burgundy');
+    }
+  }
+  @include element('navigation') {
+    padding: 20px;
+    @include modifier('link') {
+      text-decoration: none;
+      color: setColor('black');
+      font-size: 1.8em;
     }
   }
 }
